# packages/cactus-plugin-ledger-connector-corda/src/main/typescript/web-services/get-flow-status-response-endpoint-v1.ts
@@ -1,57 +1,52 @@
 import { Express, Request, Response } from "express";
 
 import {
-  Logger,
-  LoggerProvider,
-  LogLevelDesc,
-  Checks,
-  IAsyncProvider,
-} from "@hyperledger/cactus-common";
-
-import {
   IWebServiceEndpoint,
   IExpressRequestHandler,
   IEndpointAuthzOptions,
   Configuration,
 } from "@hyperledger/cactus-core-api";
 
-import OAS from "../../json/openapi.json";
-
 import { registerWebServiceEndpoint } from "@hyperledger/cactus-core";
+
+import {
+  Checks,
+  IAsyncProvider,
+  Logger,
+  LoggerProvider,
+  LogLevelDesc,
+} from "@hyperledger/cactus-common";
+
 import {
   DefaultApi,
-  ListFlowsV1Request,
-  ListFlowsV1Response,
+  FlowStatusV5Response,
 } from "../generated/openapi/typescript-axios";
 
-import {
-  PluginLedgerConnectorCorda,
-  CordaVersion,
-} from "../plugin-ledger-connector-corda";
-export interface IListFlowsEndpointV1Options {
+import OAS from "../../json/openapi.json";
+
+export interface IFlowStatusResponseEndpointV1Options {
   logLevel?: LogLevelDesc;
   apiUrl?: string;
-  cordaVersion?: CordaVersion;
-  connector?: PluginLedgerConnectorCorda;
+  holdingIDShortHash: string;
+  clientRequestID: string;
 }
 
-export class ListFlowsEndpointV1 implements IWebServiceEndpoint {
-  public static readonly CLASS_NAME = "ListFlowsEndpointV1";
+export class FlowStatusResponseEndpointV1 implements IWebServiceEndpoint {
+  public static readonly CLASS_NAME = "FlowStatusResponseEndpointV1";
 
   private readonly log: Logger;
   private readonly apiUrl?: string;
-
   public get className(): string {
-    return ListFlowsEndpointV1.CLASS_NAME;
+    return FlowStatusResponseEndpointV1.CLASS_NAME;
   }
 
-  constructor(public readonly options: IListFlowsEndpointV1Options) {
+  constructor(public readonly options: IFlowStatusResponseEndpointV1Options) {
     const fnTag = `${this.className}#constructor()`;
 
     Checks.truthy(options, `${fnTag} options`);
 
     this.log = LoggerProvider.getOrCreate({
-      label: "list-flows-endpoint-v1",
+      label: "list-flow-status-response-endpoint-v1",
       level: options.logLevel || "INFO",
     });
 
@@ -59,7 +54,6 @@ export class ListFlowsEndpointV1 implements IWebServiceEndpoint {
   }
 
   getAuthorizationOptionsProvider(): IAsyncProvider<IEndpointAuthzOptions> {
-    // TODO: make this an injectable dependency in the constructor
     return {
       get: async () => ({
         isProtected: true,
@@ -68,26 +62,30 @@ export class ListFlowsEndpointV1 implements IWebServiceEndpoint {
     };
   }
 
-  public getExpressRequestHandler(): IExpressRequestHandler {
-    return this.handleRequest.bind(this);
-  }
-
-  public get oasPath(): (typeof OAS.paths)["/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/list-flows"] {
+  public get oasPath(): (typeof OAS.paths)["/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/flow/{holdingIDShortHash}/{clientRequestID}"] {
     return OAS.paths[
-      "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/list-flows"
+      "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/flow/{holdingIDShortHash}/{clientRequestID}"
     ];
   }
 
+  /**
+   * Returns the endpoint path to be used when installing the endpoint into the
+   * API server of Cactus.
+   */
   public getPath(): string {
-    return this.oasPath.post["x-hyperledger-cacti"].http.path;
+    return this.oasPath.get["x-hyperledger-cactus"].http.path;
   }
 
   public getVerbLowerCase(): string {
-    return this.oasPath.post["x-hyperledger-cacti"].http.verbLowerCase;
+    return this.oasPath.get["x-hyperledger-cactus"].http.verbLowerCase;
   }
 
   public getOperationId(): string {
-    return this.oasPath.post.operationId;
+    return this.oasPath.get.operationId;
+  }
+
+  public getExpressRequestHandler(): IExpressRequestHandler {
+    return this.handleRequest.bind(this);
   }
 
   public async registerExpress(
@@ -98,14 +96,15 @@ export class ListFlowsEndpointV1 implements IWebServiceEndpoint {
   }
 
   async handleRequest(req: Request, res: Response): Promise<void> {
-    const fnTag = "ListFlowsEndpointV1#handleRequest()";
+    const fnTag = "sFlowStatusResponseEndpointV1#constructor()";
     const verbUpper = this.getVerbLowerCase().toUpperCase();
     this.log.debug(`${verbUpper} ${this.getPath()}`);
+
     try {
       if (this.apiUrl === undefined) throw "apiUrl option is necessary";
-      const resBody = await this.callInternalContainer(req.body);
+      const body = await this.callInternalContainer(req.body);
       res.status(200);
-      res.send(resBody);
+      res.json(body);
     } catch (ex) {
       this.log.error(`${fnTag} failed to serve request`, ex);
       res.status(500);
@@ -114,12 +113,14 @@ export class ListFlowsEndpointV1 implements IWebServiceEndpoint {
     }
   }
 
-  async callInternalContainer(
-    req: ListFlowsV1Request,
-  ): Promise<ListFlowsV1Response> {
+  async callInternalContainer(req: any): Promise<FlowStatusV5Response> {
     const apiConfig = new Configuration({ basePath: this.apiUrl });
     const apiClient = new DefaultApi(apiConfig);
-    const res = await apiClient.listFlowsV1(req);
+    const res = await apiClient.flowStatusResponse(
+      this.options.holdingIDShortHash,
+      this.options.clientRequestID,
+      req,
+    );
     return res.data;
   }
 }
